[project]
name = "doc-new"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jieba==0.42.1",
    "myst-parser[linkify]==4.0.0",
    "pydata-sphinx-theme==0.16.1",
    "sphinx==8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme==1.1.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinx-examples==0.0.5",
    "sphinx-last-updated-by-git==0.3.8",
    "sphinx-tabs==3.4.7",
    "sphinx-togglebutton==0.3.2",
    "sphinxcontrib-video>=0.4.1",
]
